# zergswarm

./: .gitignore  Readme.rst  requirements.txt  setup.cfg  setup.py
zergswarm/: __init__.py  __main__.py  colony.py  comm_center.py  config_reader.py  connection_mixin.py  overmind.py  reports.py  settings.ini_template  subprocess_manager.py
