[metadata]
name = zergswarm
version = 0.11
author = arcombe012
author_email =
url = https://github.com/arcombe012/zergswarm.git
description = Simple Locust-inspired swarming library using asyncio and zeromq.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords =
    swarm
    web api testing
    website testing
license = Apache-2.0
license_file = LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = zergswarm
tests_require =
    nose
    pytest
    coverage
python_requires = >= 3.6
setup_requires =
    setuptools
    wheel
install_requires =
    toolz
    pyzmq
    aiohttp


[bdist_wheel]
universal = False


[nosetests]
with-coverage = True
cover-package = zergswarm
cover-erase = True
cover-inclusive = True
cover-branches = True

[coverage:run]
include =
    zergswarm/*.py
omit =
    */__init__.py
    */__main__.py


[coverage:report]
show_missing = True
exclude_lines =
    pragma: no cover
omit =
    */__init__.py
    */__main__.py
